--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="javascriptFiles\app.js" defer></script>
 </head>
 <body>
-  
+  <p id="message-output"></p>
+  <input type="text" id="user-input">
 </body>
 </html>
